--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>Routing</title>
 
     <!-- don't use this in production: -->
-    
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <!-- we will put our react component inside this div -->
-
-
+    <div id="root"></div>
     <!-- load react and router -->
-   
+
     <!-- load our react component -->
-   
   </body>
 </html>
