--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
     <!-- we will put our react component inside this div -->
     <div id="root"></div>
     <!-- load react and router -->
-
+    <script
+      src="https://unpkg.com/react/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-router/umd/react-router.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-router-dom/umd/react-router-dom.development.js"
+      crossorigin
+    ></script>
     <!-- load our react component -->
   </body>
 </html>
