--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>Routing</title>
 
     <!-- don't use this in production: -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
@@ -31,6 +44,8 @@
     <script src="home.js" defer type="text/babel"></script>
     <script src="about.js" defer type="text/babel"></script>
     <script src="products.js" defer type="text/babel"></script>
+    <script src="nav.js" defer type="text/babel"></script>
+    &nbsp;&nbsp;
     <script src="index.js" defer type="text/babel"></script>
   </body>
 </html>
