refactor for Bad Bank app

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Routing</title>
+    <title>Bad Bank</title>
 
     <!-- don't use this in production: -->
     <link
@@ -41,11 +41,15 @@
       crossorigin
     ></script>
     <!-- load our react component -->
+    <script src="context.js.js" defer type="text/babel"></script>
+    <script src="navbar.js" defer type="text/babel"></script>
+    <script src="createaccount.js" defer type="text/babel"></script>
+    <script src="login.js" defer type="text/babel"></script>
+    <script src="deposit.js" defer type="text/babel"></script>
+    <script src="withdraw.js" defer type="text/babel"></script>
+    <script src="balance.js" defer type="text/babel"></script>
+    <script src="alldata.js" defer type="text/babel"></script>
     <script src="home.js" defer type="text/babel"></script>
-    <script src="about.js" defer type="text/babel"></script>
-    <script src="products.js" defer type="text/babel"></script>
-    <script src="nav.js" defer type="text/babel"></script>
-    &nbsp;&nbsp;
     <script src="index.js" defer type="text/babel"></script>
   </body>
 </html>
