--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     ></script>
 
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <script
+      src="https://kit.fontawesome.com/fb2642c713.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- we will put our react component inside this div -->
